# Kkubuck.github.io

./: .gitignore  404.html  404.md  DESIGN_PROMPT.md  Gemfile  README.md  _config.yml  about.md  browserconfig.xml  example-hub.html  index.html  index.md  presentations.html  presentations.md  publications.html  publications.md  pyproject.toml  search.json  site.webmanifest  tags.html  tags.md
_data/: cv.yml  profile.yml  projects.yml
_includes/: blogaside.html  command-palette.html  favicon.html  footer.html  head.html  header.html  recentpubs.html
_layouts/: blog.html  category-archive.html  cv.html  default.html  hub.html  page.html  paper-archive.html  paper-home.html  post.html  tags.html
_posts/: 2022-06-21-tistory-10.md  2022-06-21-tistory-11.md  2022-06-21-tistory-12.md  2022-06-21-tistory-13.md  2022-06-21-tistory-14.md  2022-06-21-tistory-15.md  2022-06-21-tistory-16.md  2022-06-21-tistory-17.md  2022-06-21-tistory-18.md  2022-06-21-tistory-19.md  2022-06-21-tistory-20.md  2022-06-21-tistory-21.md  2022-07-02-tistory-22.md  2022-07-02-tistory-23.md  2022-07-03-tistory-25.md  2022-07-03-tistory-26.md  2022-07-04-tistory-27.md  2022-09-05-tistory-29.md  2022-09-05-tistory-30.md  2022-09-05-tistory-31.md  2022-09-05-tistory-32.md  2022-09-05-tistory-33.md  2022-09-05-tistory-34.md  2022-09-06-tistory-35.md  2022-12-17-tistory-36.md  2023-11-16-tistory-37.md  2023-11-16-tistory-38.md  2023-11-16-tistory-39.md  2024-02-15-tistory-40.md  2024-02-15-tistory-41.md  2024-02-19-tistory-42.md  2024-02-19-tistory-43.md  2024-02-22-tistory-44.md  (+33 more)
_scripts/: publish.sh  (+3 more)
(+98 files in other folders)
